@@ -403,6 +403,9 @@ struct SCIP_Set
 
    /* Writing */
    SCIP_Bool             write_allconss;     /**< should all constraints be written (including the redundant constraints)? */
+   int                   write_genoffset;    /**< when writing the problem with generic names, we start with index
+                                              *   0; using this parameter we can change the starting index to be
+                                              *   different */
 };
 
 #ifdef __cplusplus
